// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty Reasons shows a reason when a profil has no network markers 1`] = `
<div
  className="EmptyReasons"
>
  <h3>
    The 
    network chart
     is empty for “
    Empty
    ”
  </h3>
  <p>
    This thread has no network markers.
  </p>
</div>
`;

exports[`Empty Reasons shows a reason when a profile has no marker 1`] = `
<div
  className="EmptyReasons"
>
  <h3>
    The 
    marker chart
     is empty for “
    Empty
    ”
  </h3>
  <p>
    This thread contains no markers.
  </p>
</div>
`;

exports[`renders MarkerChart correctly 1`] = `
<div
  className="markerChart"
>
  <div
    className="chartViewport"
    onMouseDown={[Function]}
    onWheel={[Function]}
  >
    <div>
      <canvas
        className="chartCanvas markerChartCanvas"
        onDoubleClick={[Function]}
        onMouseDown={[Function]}
        onMouseMove={[Function]}
        onMouseOut={[Function]}
      />
    </div>
    <div
      className="chartViewportShiftScroll hidden"
    >
      Zoom Chart:
      <kbd
        className="chartViewportShiftScrollKbd"
      >
        Shift
      </kbd>
      <kbd
        className="chartViewportShiftScrollKbd"
      >
        Scroll
      </kbd>
    </div>
  </div>
</div>
`;

exports[`renders MarkerChart correctly 2`] = `
Array [
  Array [
    "scale",
    1,
    1,
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    0,
    0,
    200,
    300,
  ],
  Array [
    "set lineWidth",
    1,
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "measureText",
    "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.()< /:-_",
  ],
  Array [
    "measureText",
    "…",
  ],
  Array [
    "fillRect",
    1,
    1,
    248,
    1,
  ],
  Array [
    "fillRect",
    0,
    2,
    250,
    11,
  ],
  Array [
    "fillRect",
    1,
    13,
    248,
    1,
  ],
  Array [
    "measureText",
    "",
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    1,
    17,
    248,
    1,
  ],
  Array [
    "fillRect",
    0,
    18,
    250,
    11,
  ],
  Array [
    "fillRect",
    1,
    29,
    248,
    1,
  ],
  Array [
    "measureText",
    "",
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "arc",
    105,
    39.5,
    3.75,
    0,
    6.283185307179586,
  ],
  Array [
    "fill",
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    126,
    49,
    248,
    1,
  ],
  Array [
    "fillRect",
    125,
    50,
    250,
    11,
  ],
  Array [
    "fillRect",
    126,
    61,
    248,
    1,
  ],
  Array [
    "measureText",
    "",
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    126,
    65,
    123,
    1,
  ],
  Array [
    "fillRect",
    125,
    66,
    125,
    11,
  ],
  Array [
    "fillRect",
    126,
    77,
    123,
    1,
  ],
  Array [
    "measureText",
    "click",
  ],
  Array [
    "set fillStyle",
    "white",
  ],
  Array [
    "fillText",
    "click",
    128,
    75,
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "arc",
    180,
    87.5,
    3.75,
    0,
    6.283185307179586,
  ],
  Array [
    "fill",
  ],
  Array [
    "set fillStyle",
    "#eee",
  ],
  Array [
    "fillRect",
    0,
    15,
    200,
    1,
  ],
  Array [
    "fillRect",
    0,
    31,
    200,
    1,
  ],
  Array [
    "fillRect",
    0,
    47,
    200,
    1,
  ],
  Array [
    "fillRect",
    0,
    63,
    200,
    1,
  ],
  Array [
    "fillRect",
    0,
    79,
    200,
    1,
  ],
  Array [
    "fillRect",
    0,
    95,
    200,
    1,
  ],
  Array [
    "createLinearGradient",
    0,
    0,
    150,
    0,
  ],
  Array [
    "addColorStop",
    0,
    "rgba(255, 255, 255, 0.8)",
  ],
  Array [
    "addColorStop",
    1,
    "rgba(255, 255, 255, 0.0)",
  ],
  Array [
    "set fillStyle",
    Object {
      "addColorStop": [MockFunction] {
        "calls": Array [
          Array [
            0,
            "rgba(255, 255, 255, 0.8)",
          ],
          Array [
            1,
            "rgba(255, 255, 255, 0.0)",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      },
    },
  ],
  Array [
    "fillRect",
    0,
    0,
    150,
    15,
  ],
  Array [
    "fillRect",
    0,
    16,
    150,
    15,
  ],
  Array [
    "fillRect",
    0,
    32,
    150,
    15,
  ],
  Array [
    "fillRect",
    0,
    48,
    150,
    15,
  ],
  Array [
    "fillRect",
    0,
    64,
    150,
    15,
  ],
  Array [
    "fillRect",
    0,
    80,
    150,
    15,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "Marker A",
    5,
    11,
  ],
  Array [
    "fillText",
    "Dot marker E",
    5,
    43,
  ],
  Array [
    "fillText",
    "Very very very very very very Very very very very very very Very very very very very very Very very very very very very Very very very very very very …",
    5,
    59,
  ],
  Array [
    "fillText",
    "Marker G type DOMEvent",
    5,
    75,
  ],
  Array [
    "fillText",
    "Non-interval marker F without data",
    5,
    91,
  ],
]
`;

exports[`renders MarkerChart correctly 3`] = `
<div
  className="markerChart"
>
  <div
    className="chartViewport"
    onMouseDown={[Function]}
    onWheel={[Function]}
  >
    <div>
      <canvas
        className="chartCanvas markerChartCanvas"
        onDoubleClick={[Function]}
        onMouseDown={[Function]}
        onMouseMove={[Function]}
        onMouseOut={[Function]}
      />
    </div>
    <div
      className="chartViewportShiftScroll hidden"
    >
      Zoom Chart:
      <kbd
        className="chartViewportShiftScrollKbd"
      >
        Shift
      </kbd>
      <kbd
        className="chartViewportShiftScrollKbd"
      >
        Scroll
      </kbd>
    </div>
  </div>
</div>
`;

exports[`renders MarkerChart correctly 4`] = `
Array [
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    0,
    0,
    200,
    300,
  ],
  Array [
    "set lineWidth",
    1,
  ],
  Array [
    "set fillStyle",
    "#eee",
  ],
  Array [
    "fillRect",
    0,
    15,
    200,
    1,
  ],
  Array [
    "createLinearGradient",
    0,
    0,
    150,
    0,
  ],
  Array [
    "addColorStop",
    0,
    "rgba(255, 255, 255, 0.8)",
  ],
  Array [
    "addColorStop",
    1,
    "rgba(255, 255, 255, 0.0)",
  ],
  Array [
    "set fillStyle",
    Object {
      "addColorStop": [MockFunction] {
        "calls": Array [
          Array [
            0,
            "rgba(255, 255, 255, 0.8)",
          ],
          Array [
            1,
            "rgba(255, 255, 255, 0.0)",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      },
    },
  ],
  Array [
    "fillRect",
    0,
    0,
    150,
    15,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "Load event",
    5,
    11,
  ],
]
`;

exports[`renders the hoveredItem markers properly 1`] = `
Array [
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    0,
    0,
    200,
    300,
  ],
  Array [
    "set lineWidth",
    1,
  ],
  Array [
    "set fillStyle",
    "Highlight",
  ],
  Array [
    "fillRect",
    1,
    1,
    248,
    1,
  ],
  Array [
    "fillRect",
    0,
    2,
    250,
    11,
  ],
  Array [
    "fillRect",
    1,
    13,
    248,
    1,
  ],
  Array [
    "measureText",
    "",
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    1,
    17,
    248,
    1,
  ],
  Array [
    "fillRect",
    0,
    18,
    250,
    11,
  ],
  Array [
    "fillRect",
    1,
    29,
    248,
    1,
  ],
  Array [
    "measureText",
    "",
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "arc",
    105,
    39.5,
    3.75,
    0,
    6.283185307179586,
  ],
  Array [
    "fill",
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    126,
    49,
    248,
    1,
  ],
  Array [
    "fillRect",
    125,
    50,
    250,
    11,
  ],
  Array [
    "fillRect",
    126,
    61,
    248,
    1,
  ],
  Array [
    "measureText",
    "",
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    126,
    65,
    123,
    1,
  ],
  Array [
    "fillRect",
    125,
    66,
    125,
    11,
  ],
  Array [
    "fillRect",
    126,
    77,
    123,
    1,
  ],
  Array [
    "set fillStyle",
    "white",
  ],
  Array [
    "fillText",
    "click",
    128,
    75,
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "arc",
    180,
    87.5,
    3.75,
    0,
    6.283185307179586,
  ],
  Array [
    "fill",
  ],
  Array [
    "set fillStyle",
    "#eee",
  ],
  Array [
    "fillRect",
    0,
    15,
    200,
    1,
  ],
  Array [
    "fillRect",
    0,
    31,
    200,
    1,
  ],
  Array [
    "fillRect",
    0,
    47,
    200,
    1,
  ],
  Array [
    "fillRect",
    0,
    63,
    200,
    1,
  ],
  Array [
    "fillRect",
    0,
    79,
    200,
    1,
  ],
  Array [
    "fillRect",
    0,
    95,
    200,
    1,
  ],
  Array [
    "createLinearGradient",
    0,
    0,
    150,
    0,
  ],
  Array [
    "addColorStop",
    0,
    "rgba(255, 255, 255, 0.8)",
  ],
  Array [
    "addColorStop",
    1,
    "rgba(255, 255, 255, 0.0)",
  ],
  Array [
    "set fillStyle",
    Object {
      "addColorStop": [MockFunction] {
        "calls": Array [
          Array [
            0,
            "rgba(255, 255, 255, 0.8)",
          ],
          Array [
            1,
            "rgba(255, 255, 255, 0.0)",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      },
    },
  ],
  Array [
    "fillRect",
    0,
    0,
    150,
    15,
  ],
  Array [
    "fillRect",
    0,
    16,
    150,
    15,
  ],
  Array [
    "fillRect",
    0,
    32,
    150,
    15,
  ],
  Array [
    "fillRect",
    0,
    48,
    150,
    15,
  ],
  Array [
    "fillRect",
    0,
    64,
    150,
    15,
  ],
  Array [
    "fillRect",
    0,
    80,
    150,
    15,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "Marker A",
    5,
    11,
  ],
  Array [
    "fillText",
    "Dot marker E",
    5,
    43,
  ],
  Array [
    "fillText",
    "Very very very very very very Very very very very very very Very very very very very very Very very very very very very Very very very very very very …",
    5,
    59,
  ],
  Array [
    "fillText",
    "Marker G type DOMEvent",
    5,
    75,
  ],
  Array [
    "fillText",
    "Non-interval marker F without data",
    5,
    91,
  ],
]
`;
